packages/anthill/src/CodeBlock.module.css
.container {
  background: var(--context-background);
  border: var(--context-border);
  border-radius: var(--context-border-radius);
  position: relative;

  .copyButton {
    color: light-dark(var(--color-gray-s2), var(--color-gray-t1));
    position: absolute;
    right: var(--context-spacing);
    top: var(--context-spacing);
  }

  .code {
    font: var(--font-small-monospace);
    max-height: calc(20lh + var(--context-spacing) * 2);
    overflow: auto;
    padding: var(--context-spacing);
    tab-size: 2;
    white-space: pre-wrap;
  }

  &.seamless {
    background: transparent;
    border: none;
    border-radius: 0;

    .copyButton {
      right: 0;
      top: 0;
    }

    .code {
      padding: 0;
    }
  }
}

